--- a/index.html
+++ b/index.html
@@ -1,27 +1,82 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" class="h-100">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.6/examples/sticky-footer-navbar/">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <script defer src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="jquery-ui.min.css">
-    <script defer src="jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="/assets/CSS/styles.css">
-    <script defer src="/assets/js/script.js"></script>
-    <title>Document</title>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+        crossorigin="anonymous"></script>
+    <script defer src="Assets/script.js"></script>
+    <link rel="stylesheet" href="Assets/style.css">
+    <title>Weather Dashboard</title>
 </head>
 
-<body>
+<body class="d-flex flex-column h-100">
+    <header>
+        <nav class="navbar navbar-dark bg-dark">
+            <p class="nav-name">Weather Dashboard</p>
+        </nav>
+    </header>
+    <main class="flex-shrink-0 mb-5">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-2">
+                    <div class="row ml-2 mt-3">
+                        <div class="col-sm-12">
+                            <label>Search for a City</label>
+                            <form class="d-flex">
+                                <input class="form-control mr-2" type="text" id="given-input">
+                                <button class="btn btn-primary" type="submit" value="Submit"
+                                    id="submitBtn">Submit</button>
+                            </form>
+                            <aside class="col-sm-12" id="searched">
+                                <!-- City searched goes here -->
+                            </aside>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="col-sm-10 justify-content-center" id="issues">
+                    <div class="row mt-3" id="one-day">
+                        <h2>Today's Forecast:</h2>
+                        <hr>
+                        <div
+                            class="col-sm-11 jumbotron jumbotron-fluid rounded-pill  jumbotron-back border border-success">
+                            <div class="container" id="fetch">
+                                <p class="display-4" id="fetch-elm"></p>
+                                <!-- Daily forecast goes here -->
+                            </div>
+                        </div>
+                        <div class="col-sm-12">
+                            <h2>5 Days Forecast:</h2>
+                            <hr>
+                        </div>
+                        <div class="col-sm-12" id="five-days">
+                            <div class="row" id="fetch-five">
+                                <!-- Five days forecast goes here -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer class="footer mt-auto py-3">
+        <div class="container">
+            <span class="text-muted">&copy; Tolga Secme, 2020, All Rights Reserved.</span>
+        </div>
+    </footer>
 
-
-
-</body>
-
-
-</html>
+    <!-- Optional JavaScript; choose one of the two! -->
+    <!--Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
